fixes #16 update token service to use builder for event